--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -37,8 +37,13 @@ jobs:
           git config --local user.name "GitHub Action[Bot]"
           git add -A
           git commit -m "update built files after user commit"
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+      # 查看 workflow 的文档来获取更多信息
+      # @see https://github.com/crazy-max/ghaction-github-pages
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          
+          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # 部署到 gh-pages 分支
+          BRANCH: gh-pages
+          # 部署目录为 VuePress 的默认输出目录
+          FOLDER: /dist
