--- a/.github/workflows/page.yml
+++ b/.github/workflows/page.yml
@@ -46,4 +46,4 @@ jobs:
           # 部署到 gh-pages 分支
           BRANCH: gh-pages
           # 部署目录为 VuePress 的默认输出目录
-          FOLDER: /dist
+          FOLDER: dist
