--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "vue-axios": "^3.2.4",
     "vue-router": "^3.5.1",
     "vue-wechat-title": "^2.0.7",
-    "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -36,7 +35,7 @@
     "sass-loader": "^10.1.1",
     "vue-cli-plugin-vuetify": "~2.3.1",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "material-design-icons-iconfont": "^6.1.0"
   },
   "eslintConfig": {
     "root": true,
